--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "deploy": "node deploy-commands.js"
+    "deploy": "node deploy-commands.js",
+    "postinstall": "node deploy-commands.js"
   },
   "dependencies": {
-  "@discordjs/opus": "^0.10.0",
-  "@discordjs/voice": "^0.17.0",
-  "discord.js": "^14.16.0",
-  "dotenv": "^16.4.5",
-  "play-dl": "^1.9.7"
+    "@discordjs/opus": "^0.10.0",
+    "@discordjs/voice": "^0.17.0",
+    "discord.js": "^14.16.0",
+    "dotenv": "^16.4.5",
+    "play-dl": "^1.9.7"
+  }
 }
