--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "deploy": "node deploy-commands.js",
-    "postinstall": "node deploy-commands.js"
+    "deploy": "node deploy-commands.js"
   },
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
