--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@discordjs/voice": "^0.17.0",
     "discord.js": "^14.16.0",
     "dotenv": "^16.4.5",
-    "play-dl": "^1.9.7",
-    "undici": "^6.21.0"
+    "play-dl": "^1.9.7"
   }
 }
-
