--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "deploy": "node deploy-commands.js"
+    "deploy": "node deploy-commands.js",
+    "clear:global": "node clear-global-commands.js"
+
   },
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
